# apple2esp32cyd

./: CMakeLists.txt  README.md  apple2esp32cyd.ino  atari_in.txt  atari_joy.txt  atari_joy2.txt  atari_joy3.txt  atari_joy4.txt  ble.ino  config.h  cpu.ino  disk.ino  emu.h  emu6502.ino  eprom.ino  globals.cpp  hd.ino  interface.ino  joystick.ino  keyboardPs2.ino  log.ino  memory.ino  mouse.ino  optionsui.ino  proto.h  rom.h  sd.ino  softswitches.ino  speaker.ino  touchkeyboard.ino  video.ino
build-t386/: .ninja_deps  .ninja_log
host/: msx_host.cpp
src/apple2/: cpu.cpp  disk.cpp  hd.cpp  languagecard.cpp  memory.cpp  mouse.cpp  softswitches.cpp
src/atari/: atari.cpp  atari.h  atari_audio.cpp  atari_cart.cpp  atari_cpu.cpp  atari_globals.cpp  atari_memory.cpp  atari_riot.cpp  atari_tia.cpp
src/c64/: c64.cpp  c64.h  c64_cia.cpp  c64_cpu.cpp  c64_crt.cpp  c64_disk.cpp  c64_globals.cpp  c64_keyboard.cpp  c64_memory.cpp  c64_sid.cpp  c64_vic.cpp  c64rom.cpp
src/desktop/: README.md  audio_sdl.cpp  debug_bridge.cpp  debug_bridge.h  display_sdl.cpp  display_sdl.h  hal.cpp  input_sdl.cpp  main.cpp  sd_host.cpp  ui_imgui.cpp  ui_imgui.h
src/iigs/: m0_bench.cpp  m0_bench.h
src/msx/: msx.cpp  msx.h  msx_cart.cpp  msx_cbios.cpp  msx_cbios.h  msx_disk.cpp  msx_disk.h  msx_diskrom.cpp  msx_diskrom.h  msx_globals.cpp  msx_machine.cpp  msx_vdp.cpp
src/nes/: nes.cpp  nes.h  nes_cart.cpp  nes_cpu.cpp  nes_globals.cpp
src/pcxt/: pcxt.cpp  pcxt.h  pcxt_machine.cpp  pcxt_time.cpp
src/pcxt/fabgl/: MC146818.h  bios.cpp  fabgl.h  graphicsadapter.h  i8042.h  i8086.cpp  machine.h
src/shared/: applelogo.h  bootlogo.h  display_gfx.cpp  display_gfx.h  eprom.cpp  interface.cpp  joystick.cpp  keyboardPs2.cpp  log.cpp  optionsui.cpp  sd.cpp  speaker.cpp  touchkeyboard.cpp  usbkeyboard.cpp  video.cpp
src/sms/: sms.cpp  sms.h
src/tiny386/: fmopl.c  fpu.c  i386.c  misc.c  pc.c  tiny386.cpp  tiny386.h  tiny386_core.cpp  tiny386_core.h  tiny386_roms.c  tiny386_roms.h  vga.c  vga.h
tools/: run_desktop.ps1
